Search Fields: alignmentment issues have been fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,19 +74,18 @@ textarea {
   font-family: 'Square721Regular';
 	 font-size:18px;
 	 line-height:22px;
-  font-weight:normal;
+    font-weight:normal;
 	 padding-bottom:10px;
 	 color:#4b6a15;
-  padding-left:24px;
+    padding-left:24px;
   
   }
 input[type=password], input[type=text]{
-	border: 1px solid #f3df95;
+  border: 1px solid #f3df95;
   background: #FFF;
   color: #333333;
   padding: 5px;
-  margin-top: 8px;
-  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 ol, ul {
@@ -2251,6 +2250,7 @@ p.about-text {
 
 .header-search input[type="text"] {
   width:215px;
+
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -2296,4 +2296,10 @@ p.about-text {
 
 .change-password {
   margin-bottom: 20px;
+}
+
+.change-password input[type="text"], 
+.change-password input[type="password"] {
+  margin-bottom: 10px !important;
+  margin-top: 6px !important;
 }
